// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Nav Component should match the snapshot 1`] = `
<nav
  className="nav-container"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="fav-btn-group"
    onClick={[Function]}
    to="/favorites"
  >
    <div
      className="fav-btn-nav"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="num-favs"
      >
        0
      </span>
      <p
        className="favorites-text"
      >
        FAVORITES
      </p>
    </div>
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="show"
    to="/login"
  >
    <div
      className="login-btn"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <img
        alt="Click here to login"
        className="login-icon"
        src="margot.png"
      />
      <p
        className="login-text"
      >
        LOGIN
      </p>
    </div>
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="hidden"
    onClick={[MockFunction]}
    to="/"
  >
    <img
      alt="Click here to login"
      className="login-icon"
      src="margot.png"
    />
    <p
      className="login-text"
    >
      LOGOUT
    </p>
  </NavLink>
</nav>
`;

exports[`Nav Nav Component should toggle login text depending on user login status 1`] = `
<nav
  className="nav-container"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="fav-btn-group"
    onClick={[Function]}
    to="/favorites"
  >
    <div
      className="fav-btn-nav"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="num-favs"
      >
        0
      </span>
      <p
        className="favorites-text"
      >
        FAVORITES
      </p>
    </div>
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="hidden"
    to="/login"
  >
    <div
      className="login-btn"
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <img
        alt="Click here to login"
        className="login-icon"
        src="margot.png"
      />
      <p
        className="login-text"
      >
        LOGIN
      </p>
    </div>
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="logout-btn"
    onClick={[MockFunction]}
    to="/"
  >
    <img
      alt="Click here to login"
      className="login-icon"
      src="margot.png"
    />
    <p
      className="login-text"
    >
      LOGOUT
    </p>
  </NavLink>
</nav>
`;
